# evAutomationUpdated

./: .env  .env.example  .gitignore  ARCHITECTURE_REVIEW.md  README.md  Sample questions.xlsx  all_questions.txt  calibrate_local_judge.py  chunking_report.json  config.py  document_processor.py  eval_runner.py  experiment.py  fintune.py  main.py  ollama_test.py  pyproject.toml  requirements.txt  streamlit_ui.py  test_results.json  test_resultsComparsion.xlsx  test_results_all_101.xlsx  test_runner.py  vector_store.py
analysis_out/: SCORING_HEURISTICS_AUDIT.md
artifacts/correct_responses/: all_runs_metrics.xlsx  all_runs_responses.csv  all_runs_single_sheet.xlsx  gemma27b_rag_responses.csv  gemma27b_rag_responses.md  qwen14b_no_rag_responses.csv  qwen14b_no_rag_responses.md  qwen14b_rag_responses.csv  qwen14b_rag_responses.md  qwen32b_no_rag_responses.csv  qwen32b_no_rag_responses.md  qwen32b_rag_responses.csv  qwen32b_rag_responses.md  qwen35b_no_rag_responses.csv  qwen35b_no_rag_responses.md  qwen35b_rag_responses.csv  qwen35b_rag_responses.md  qwen_rag_responses.csv  qwen_rag_responses.md
data/: Human validated 50 questions.xlsx
pipeline/: run_all_phases.bat
scripts/: build_fixed_eval_pack.py  check_hf_offline.py  compute_layer_contrib.py  hf_local_env.sh  prune_layers_from_metric.py  run_ragas_resume.py  run_ragas_step.py
tests/: test_calibration.py  test_derived_analytics.py  test_evaluation_export.py  test_excel_loader.py  test_qwen_human50_localjudge_regression.py  test_retrieval.py  test_runner.py  test_segmentation_and_prompts.py  test_settings.py
(+595 files in other folders)
