[project]
name = "ftthings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.70.0",
    "langchain>=1.2.6",
    "langchain-ollama>=1.0.1",
    "ollama>=0.6.1",
    "openpyxl>=3.1.0",
    "peft>=0.18.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.53.0",
    "torch>=2.9.1",
    "transformers>=4.57.5",
    "google-generativeai>=0.7.0",
    "pandas>=2.0.0",
]
